[gd_scene load_steps=11 format=3 uid="uid://c9x8y7z6w5v4"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/AtomicDefinitions.gd" id="2_atom_def"]
[ext_resource type="Shader" path="res://shaders/atomic_physics.gdshader" id="3_phys"]
[ext_resource type="Shader" path="res://shaders/dna_physics.gdshader" id="4_dna_phys"]
[ext_resource type="Shader" path="res://shaders/membrane_physics.gdshader" id="5_memb_phys"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.005, 0.005, 0.01, 1)
ambient_light_source = 2
ambient_light_color = Color(0.1, 0.1, 0.15, 1)
ssao_enabled = true
ssao_radius = 0.5
ssao_intensity = 3.0
ssao_power = 2.0
glow_enabled = true
glow_intensity = 0.5
glow_strength = 0.9
glow_bloom = 0.05
glow_blend_mode = 0
volumetric_fog_enabled = true
volumetric_fog_density = 0.005
volumetric_fog_albedo = Color(0.2, 0.2, 0.3, 1)
adjustment_enabled = true
adjustment_saturation = 1.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_Fast"]
[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_Atom"]
vertex_color_use_as_albedo = true
diffuse_mode = 3
specular_mode = 1
roughness = 0.3
rim_enabled = true
rim = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_Empty"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_DNA"]
shader = ExtResource("4_dna_phys")
shader_parameter/cell_radius = 20.0
shader_parameter/cell_length = 40.0

[node name="Main" type="Node3D"]
script = ExtResource("1_main")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
light_energy = 2.0
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 25)

; DNAParticles removed - DNA now rendered via MoleculeLOD system

[node name="LoadingLayer" type="CanvasLayer" parent="."]

[node name="BG" type="ColorRect" parent="LoadingLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.01, 0.01, 0.01, 1)

[node name="CenterContainer" type="CenterContainer" parent="LoadingLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="LoadingLayer/CenterContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="LoadingLayer/CenterContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 32
text = "ATOMIC ENGINE INITIALIZATION"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="LoadingLayer/CenterContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Allocating VRAM..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="LoadingLayer/CenterContainer/VBox"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
show_percentage = false

[node name="LogLabel" type="RichTextLabel" parent="LoadingLayer/CenterContainer/VBox"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_colors/default_color = Color(0.3, 0.3, 0.3, 1)
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[center]System Check... OK[/center]"
scroll_active = false
